# fuzzy_ruby_server

./: .gitignore  .ruby-version  .vscodeignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  start_server.rb  tsconfig.json  webpack.config.js
client/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
client/src/: extension.ts
fuzzy_ruby_server/: event_handler.rb  server.rb  workspace.rb
src/: main.rs  persistence.rs
