[package]
name = "fuzzy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
simplelog = "0.12.0"
tokio = { version = "1.20.1", features = ["full"] }
tower-lsp = "0.17.0"
