[package]
name = "fuzzy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4.17"
# simplelog = "0.12.0"
# tantivy = "0.18.0"
tower-lsp = "0.19.0"
env_logger = "0.10.0"
filetime = "0.2.17"
lib-ruby-parser = "4.0.3"
# tantivy = { git = "https://github.com/quickwit-oss/tantivy" }
tokio = { version = "1.20.1", features = ["full"] }
# tower-lsp = { path = "../tower-lsp" }
# walkdir = "2.3.2"
log = "0.4.17"
# uuid = "1.1.2"
blake3 = "1.3.1"
phf = { version = "0.11.1", features = ["macros"] }
jwalk = "0.8.1"
# home = "0.5.3"
quit = "2.0.0"
regex = "1.7.1"
serde_json = "1.0.108"
tantivy = "0.21.1"
# which = "4.4.0"
# shells = "0.2.0"

[build]
target = "x86_64-unknown-linux-gnu"

[target.x86_64-unknown-linux-gnu]
psutil = "3.2.2"
linker = "/usr/local/bin/x86_64-unknown-linux-gnu-gcc"

[target.'cfg(windows)'.dependencies]
tasklist = "0.2.13"
